Fix dashboard sider overflow (e.g. when there are many custom tags)

--- a/src/components/dashboards/DashboardSider.scss
+++ b/src/components/dashboards/DashboardSider.scss
@@ -3,6 +3,7 @@
   padding: 6px;
   padding-top: 24px;
   border-inline-end: 1px solid rgba(5, 5, 5, 0.06);
+  overflow: scroll;
 
   h3 {
     padding-left: 20px;
